# fan_of_luna_blog

./: app.py  browser_extensions.html  main.py  pyproject.toml  wsgi.py  xray_server_setup.html
css/: xray_server_setup.css
import_hostings_from_calc/: app.py  hostings.csv  hostings.ods  hostings.xlsx  import_csv.py  import_from_ods.py  import_from_xlsx.py  import_from_xlsx_with_skipped_rows.py  import_main.py  import_with_redirects.py  pyproject.toml  test.py
import_hostings_from_calc/templates/: index.html
old/: earning_list.html  index.html
static/css/: creating_server_and_preparing_it_for_work.css  hostings.css  index.css  xray_client_setup.css
templates/: auth_form.html  base.html  creating_server_and_preparing_it_for_work.html  earning_list.html  hostings.html  hostings_list.html  hostings_table.html  index.html  xray_client_setup.html  xray_server_setup.html
